--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Duels</string>
+    <string name="app_name">Sample</string>
     <string name="signed_in">Giriş yapıldı</string>
     <string name="sign_in_cancelled">Giriş kullanıcı tarafından iptal edildi</string>
     <string name="no_internet_connection">internet bağlantısını kontrol edin</string>
